# onix

./: README.md  pyproject.toml
onix/gen3/: hoenn.py
